syntax = "proto3";

option go_package = "./pb";

package pb;



message Homestay {
    int64   id = 1;
    string  title = 2;
    string  subTitle = 3;
    string  banner = 4;
    string  info = 5;
    int64   peopleNum = 6;            //容纳人的数量
    int64   homestayBusinessId = 7;   //店铺id
    int64   userId = 8;               //房东id
    int64   rowState = 9;             //0:下架 1:上架
    int64   rowType = 10;             //售卖类型0：按房间出售 1:按人次出售
    string  foodInfo = 11;            //餐食标准
    int64   foodPrice = 12;           //餐食价格(分)
    int64   homestayPrice = 13;       //民宿价格(分)
    int64   marketHomestayPrice = 14; //民宿市场价格(分)
}

message HomestayBusinessBoss {
	int64 id =1; 
	int64 userid=2;
	string Nickname=3;  
	string Avatar=4; 
	string Info =5;     
	int64 Rank = 6;     
}

message HomestayComment {
	int64 Id =1;
	int64 HomestayId =2;
	string Content=3;
	int64 Star=4;      
	string UserId=5;   
	string Nickname=6; 
	string Avatar=7;
}


message HomestayDetailReq {
  int64   id = 1;
}
message HomestayDetailResp {
  Homestay homestay = 1;
}

message HomestayListReq {
  int64 page =1;
  int64 page_size =2;
}
message HomestayListResp {
  repeated Homestay homestaylist=1;
}

message BusinessListReq {
  int64 last_id =1;
  int64 page_size =2;
  int64 Homestay_Business_Id=3;
}
message BusinessListResp {
  repeated Homestay homestaylist=1;
}

message GuessListReq {
}

message GuessListResp {
  repeated Homestay homestaylist=1;
}




service homestay {
    rpc homestayDetail(HomestayDetailReq) returns(HomestayDetailResp);
    rpc homestayList(HomestayListReq) returns(HomestayListResp);
    rpc businessList(BusinessListReq) returns(BusinessListResp);
    rpc guessList(GuessListReq) returns(GuessListResp);
}


message GoodbossReq{
}

message  GoodbossResp {
  repeated HomestayBusinessBoss bosslist=1;
}

message BussinessReq {
  int64 id = 1;
}

message BussinessResp{
  HomestayBusinessBoss  boss = 1; 
}

message  HomestaybussinesslistReq{
    int64 lastid=1;
    int64 pagesize=2;
}

message  HomestaybussinesslistResp{
  repeated HomestayBusinessBoss bosslist=1;
}


service homestaybussiness {
    rpc goodboss(GoodbossReq)returns(GoodbossResp);
    rpc homestaybussinessdetail(BussinessReq)returns(BussinessResp);
    rpc homestaybussinesslist(HomestaybussinesslistReq)returns(HomestaybussinesslistResp);
}


message  CommentListbyIdReq {
  int64 id=1;
  int64 lastid=2;
  int64 pagesize=3;
}
message  CommentListbyIdResp{
  repeated  HomestayComment commentList=1;
}
message CommentListReq{
  int64 lastid=1;
  int64 pagesize=2;
}
message CommentListResp{
  repeated  HomestayComment commentList=1;
}
service homestaycomment {
    rpc commentListbyId(CommentListbyIdReq)returns(CommentListbyIdResp);
    rpc commentList(CommentListReq)returns(CommentListResp);
}


